--- a/compose.yml
+++ b/compose.yml
@@ -54,3 +54,8 @@ services:
 #    links:
 #      - kafka
 #      - zookeeper
+  rabbitmq:
+    image: rabbitmq:management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
