--- a/news_management_system/src/main/resources/application.yml
+++ b/news_management_system/src/main/resources/application.yml
@@ -16,5 +16,12 @@ spring:
         format_sql: true
   liquibase:
     change-log: liquibase/db.changelog-master.yml
+  rabbitmq:
+    publisher:
+      logging:
+        queue: news_log
+        exchange: news_exchange
+        routing:
+          key: news.routing.key
 server:
   port: 8080
